- Add script to convert long host file names to Atari file names,
  use that in atari-hd-image script
- Add hatari-prg-args script for providing arguments to autostarted programs
- Hatari & disk image icons in SVG & PNG formats (multiple sizes)
- Remaining Hatari OSX UI changes for Hatari v1.8.0 (localization)
- Add video-recording.txt doc on video recording/uploading best practices

Fixed games:
- Superior 65 - Blood Money (cpu, exception stack and bus error)
  (note that this version is bugged and will crash with TOS 1.04 or 1.62)
- Obitus (STX version) (fdc, seek+verify on a track with no sector)
- The Teller (STX/CTR version) (cpu, exception stack and address error)

Fixed programs:
- Realtime and M by Eric Ameres (midi + mfp, toggle bit 0 of AER)
- Notator (midi, more precise TDRE bit in status register)


 Version 1.8.0 (2014-07-30):
 ---------------------------

Emulation:
- ST video changes :
  - Handle 0 byte line by switching freq in STE mode
  - Use high res when ff8260 is set to 3
  - Randomly return 0 or 1 when reading unused bits 3,7 and 11 of
    color registers (except when running from ROM)
  - Better detection of bottom border removal on a 60 Hz screen
  - support for color change during only 4 cycles
  - better bitmap/color alignment for STE med res overscan at 60 Hz
  - Set default value of nSpec512Threshold to "1" instead of "16"
  - Update the position of the next VBL when 50Hz and 60Hz lines are mixed
  - When video address is set into IO region, keep the video pointer on 24 bits
- Videl changes :
  - correct masking of the true color palette registers
- CPU changes :
  - Fix a case when MFP's interrupt happens during the IACK sequence
    for HBL/VBL
  - Many prefetch changes required by some game's protection
- Sound changes :
  - Fix STE sound mixing using LMC when mixer=0 (DMA sound only)
  - Fix some crossbar's sound errors for Falcon
  - Fix Microwire's decoding of mask/data (based on official LMC1992's doc)
- FDC changes :