@@ -1549,8 +1549,8 @@ are just STE enhanced.  These are marked with '*'.</p>
     <tr>
       <td>Aggression:
       <a href="http://pouet.net/prod.php?which=29355">RGBeast</a></td>
-      <td class="major">1.3</td>
-      <td>Overscan + blitter. Doesn't look right</td>
+      <td>1.8.1</td>
+      <td>Overscan + blitter. Requires Hatari &ge; 1.8.1</td>
     </tr>
     <tr>
       <td>Anatomica:
@@ -1584,13 +1584,19 @@ are just STE enhanced.  These are marked with '*'.</p>
       <td>Music demo with Amiga Paula soundchip emulation + tunes</td>
     </tr>
     <tr>
-      <td>Cybernetics: <a href="http://www.pouet.net/prod.php?which=14457">Relapse</a><br>
-          Cybernetics: <a href="http://www.pouet.net/prod.php?which=14458">New Stream</a>
+      <td>Cybernetics: <a href="http://www.pouet.net/prod.php?which=14458">New Stream</a>
       </td>
       <td>1.8</td>
       <td>WRITER.PRG doesn't work due to FDC "write track" command,
       but demos work fine if you convert IMG files to ST floppy images
       by removing their 8 byte header.
+    </tr>
+    <tr>
+      <td>Cybernetics: <a href="http://www.pouet.net/prod.php?which=14457">Relapse</a>
+      </td>
+      <td>1.8.1</td>
+      <td>WRITER.PRG doesn't work due to FDC "write track" command (same as 'New Stream').
+      The Graphix Sound 2 part uses blitter with overscan and requires Hatari &ge; 1.8.1.
     </tr>
     <tr>
       <td>Defence Force:
